fix: v3.0.0 bug fixes and optimizations