@@ -1,3 +1,4 @@
+--enable-preview
 --enable-native-access=ALL-UNNAMED
 --add-opens=java.base/java.lang=ALL-UNNAMED
 --add-opens=java.base/sun.misc=ALL-UNNAMED
